manifests/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: PLACEHOLDER_APP_NAME-servicePLACEHOLDER_RESOURCE_SUFFIX
  namespace: PLACEHOLDER_NAMESPACE
spec:
  selector:
    app: PLACEHOLDER_APP_NAMEPLACEHOLDER_RESOURCE_SUFFIX
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
