manifests/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: PLACEHOLDER_APP_NAME-ingressPLACEHOLDER_RESOURCE_SUFFIX
  namespace: PLACEHOLDER_NAMESPACE
  labels:
    app: PLACEHOLDER_APP_NAMEPLACEHOLDER_RESOURCE_SUFFIX
  annotations:
    # Compartilhar o MESMO ALB do Ingress "shared"
    alb.ingress.kubernetes.io/group.name: PLACEHOLDER_ENVIRONMENT-eks-shared-alb

    # Usa o ALB já existente (mesmos atributos do shared)
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: PLACEHOLDER_INGRESS_PATHPLACEHOLDER_RESOURCE_SUFFIX
            pathType: Prefix
            backend:
              service:
                name: PLACEHOLDER_APP_NAME-servicePLACEHOLDER_RESOURCE_SUFFIX
                port:
                  number: 80
